cabal-version:   3.0
name:            povozka-types
version:         0.1.0.0

-- synopsis:
-- description:
license:         BSD-3-Clause
license-file:    LICENSE
author:          Timur Aminev
maintainer:      ablearthy@gmail.com

-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:             warnings
  exposed-modules:
    Povozka.Layer170
    Povozka.MTProto
    Povozka.Primitives

  other-modules:      Povozka.Utils
  default-extensions:
    DuplicateRecordFields
    FlexibleInstances
    FunctionalDependencies
    OverloadedRecordDot

  build-depends:
    , base        ^>=4.17.1.0
    , binary
    , bytestring
    , vector

  hs-source-dirs:     src
  default-language:   Haskell2010

test-suite povozka-types-test
  import:           warnings
  default-language: Haskell2010

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base           ^>=4.17.1.0
    , binary
    , bytestring
    , povozka-types
    , vector
